Let PagePopupChromeClient schedule frames before attachRootGraphicsLayer.

This fixes a chicken-and-egg problem introduced by http://crrev.com/455325.
WebPagePopupImpl sets m_isAcceleratedCompositingActive during the first
compositing update, which scheduleAnimation wouldn't schedule without the bit.

WebPagePopupImpl now eagerly initializes m_layerTreeView, which matches what
WebViewImpl does for non-popup content.

BUG=699412,698464

Review-Url: https://codereview.chromium.org/2737193002
Cr-Commit-Position: refs/heads/master@{#455642}

Former-commit-id: a2d48d4e791055524b1dd7870ed2674c98cc6bfc